[tool.poetry]
name = "dns-singer"
version = "1.0.0"
description = "Embedding sentences in DNS records"
repository = "https://github.com/baobao1270/dns-singer"
authors = ["Joseph Chris <joseph@josephcz.xyz>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
idna = "^3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
